--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,3 @@
-[submodule "eph_sun_moon"]
-	path = /eph_sun_moon
-	url = https://github.com/komasaru/Calendar.git
-  
-
 [submodule "greenwich"]
-	path = /greenwich
+	path = /greenwich/github.com/komasaru/mk_greenwich
 	url = https://github.com/komasaru/mk_greenwich.git
