--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
-[submodule "greenwich"]
-	path = /greenwich/github.com/komasaru/mk_greenwich
+[submodule "greenwich/github.com/komasaru/mk_greenwich"]
+	path = greenwich/github.com/komasaru/mk_greenwich
 	url = https://github.com/komasaru/mk_greenwich.git
+	
+[submodule "eph_sun_moon/github.com/komasaru/mk_greenwich"]
+	path = eph_sun_moon/github.com/komasaru/mk_greenwich
+	url = https://github.com/komasaru/Calendar.git
+  
